[workspace]
members = [
    "ddbb_server",
    "ddbb_client",
    "main",
    "ddbb_libs",
    "test/connection_sever",
    "test/connection_client",
    "test/lin_test",
    "test/temp",
    "omnipaxos_core",
    "omnipaxos_storage",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

