[package]
name = "ddbb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
argrments = { path = "./argrments" }
tokio = { version = "1", features = ["full"] }
ddbb_libs = { path = "../ddbb_libs" }
bytes = "1"
ddbb_libs = { path = "../ddbb_libs" }
tokio = { version = "1.11.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3.0"
tracing = "0.1.34"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
atoi = "2.0.0"
bytes = "1"
tokio-stream = "0.1"