[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
ddbb_server = { path = "../ddbb_server" }
omnipaxos_core = { path = "../omnipaxos_core" }
omnipaxos_storage = { path = "../omnipaxos_storage" }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
ddbb_libs = { path = "../ddbb_libs" }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0" 
structopt = "0.3.26"